syntax = "proto3";
package deposit_vault;

service VaultService {
  rpc Version(VersionRequest) returns (VersionResponse);
  rpc GetAddress(AddressRequest) returns (AddressResponse);
}

message VersionRequest {}

message VersionResponse { string version = 1; }

message AddressRequest {
  string user_id = 1;
  string coin = 2;
}
message AddressResponse { string deposit_address = 1; }
