syntax = "proto3";
package deposit;

service DepositService {
  rpc Version(VersionRequest) returns (VersionResponse);
  rpc GetAddress(GetAddressRequest) returns (GetAddressResponse);
}

message VersionRequest {
}

message VersionResponse {
  string version = 1;
}

message GetAddressRequest {
  string user_id = 1;
  string coin = 2;
}

message GetAddressResponse {
  string deposit_address = 1;
}
